--- a/ISpy/Base.lproj/Main.storyboard
+++ b/ISpy/Base.lproj/Main.storyboard
@@ -1,24 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ISpy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAl-4L-X30">
+                                <rect key="frame" x="0.0" y="44" width="390" height="766"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Naruto-and-Sasuke" translatesAutoresizingMaskIntoConstraints="NO" id="4Ff-6x-o81">
+                                        <rect key="frame" x="35" y="257" width="304" height="278"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="4Ff-6x-o81" firstAttribute="bottom" secondItem="hsK-K1-agL" secondAttribute="bottom" constant="456" id="AzN-FA-Syw"/>
+                                    <constraint firstItem="4Ff-6x-o81" firstAttribute="trailing" secondItem="hsK-K1-agL" secondAttribute="trailing" constant="327" id="BoU-vJ-fzI"/>
+                                    <constraint firstItem="4Ff-6x-o81" firstAttribute="top" secondItem="hsK-K1-agL" secondAttribute="top" constant="328" id="TPZ-YD-tPe"/>
+                                    <constraint firstItem="4Ff-6x-o81" firstAttribute="leading" secondItem="hsK-K1-agL" secondAttribute="leading" constant="87" id="iIB-tb-nqL"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="hsK-K1-agL"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="fdN-k3-OU6"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <constraints>
+                            <constraint firstItem="eAl-4L-X30" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="128-lQ-vAu"/>
+                            <constraint firstItem="eAl-4L-X30" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Jof-8H-93f"/>
+                            <constraint firstItem="eAl-4L-X30" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Y6M-6V-gPE"/>
+                            <constraint firstItem="eAl-4L-X30" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rJw-me-8Ht"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="4Ff-6x-o81" id="PyY-qI-Yfh"/>
+                        <outlet property="scrollView" destination="eAl-4L-X30" id="YdA-OZ-ehE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.46153846153846" y="68.957345971563981"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Naruto-and-Sasuke" width="1278" height="674"/>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
